<resources>
    <string name="app_name">harvest21</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="broker_header">Broker</string>
    <string name="events_header">Events</string>
    <string name="map_header">Map</string>

    <!-- Broker Preferences -->
    <string name="broker_url_title">Broker URL</string>
    <string name="broker_user_title">Broker Username</string>
    <string name="broker_pass_title">Broker Password</string>
    <string name="broker_tls_title">Use TLS</string>

    <!-- Events Preferences -->
    <string name="events_device_uid_title">Device Name</string>
    <string name="events_send_pos_title">Send my location</string>

    <!-- Maps Preferences -->
    <string name="map_auto_pan">Auto Pan</string>
    <string name="map_echo_location">Echo my location</string>
</resources>
